product details page frontend

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "details-page-react",
+  "name": "product-details-page-react",
   "version": "0.1.0",
   "private": true,
+  "author": "Liazul Islam",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
